# Genesis

./: .gitignore  Genesis.code-workspace  setup.cfg
assets/: convert_stl_to_obj.py  devkit_base_descr.urdf  ignore  ik_with_collision_checking.py  ik_with_collision_checking_pc.py  sample_point_cloud.py  sample_wall.pcd
dimensional/: README.md  README_depth_to_pointcloud.md  alfred-threaded-test.py  alfred.py  alfred_lcm.py  alfred_server.py  devkit-test.py  fix_lcm_foxglove_bridge.py  lcm_foxglove_bridge_patch.txt  requirements.txt  scene_multi_mesh.py  simple_scene.py
dimensional/docker/: Dockerfile-temp
docker/: Dockerfile-ros  Dockerfile-ros-stream-ec2  Dockerfile-stream  entrypoint.sh
examples/locomotion/: Genesis_Go2_Joy.readme  go2_et.py
