[metadata]
name = genesis-world
version = 0.2.1
description = A universal and generative physics engine

[options]
packages = find:
install_requires =
    psutil
    scikit-image
    taichi == 1.7.3
    pydantic == 2.7.1
    numpy == 1.26.4
    six
    PyOpenGL
    freetype-py
    pyglet
    libigl
    pygltflib == 1.16.0
    mujoco == 3.2.5
    pycollada
    opencv-python
    lxml
    tetgen == 0.6.4
    screeninfo
    PyGEL3D
    moviepy >= 2.0.0
    numba
    pymeshlab
    coacd
    OpenEXR
    black

[options.package_data]
genesis =
    assets/*
    ext/pyrender/fonts/*
    ext/pyrender/shaders/*
    ext/VolumeSampling

[options.entry_points]
console_scripts =
    gs = genesis._main:main

